# codex-proxy

./: .gitignore  Makefile  README.md  README_EN.md  index.html  package-lock.json  proxy.py  tailwind.config.js  tsconfig.tsbuildinfo
proxy-rs/: BUILD.md  Cargo.toml  Makefile  OPTIMIZATION_SUMMARY.md  README.md
proxy-rs/.qwen/skills/auto-skill-proxy-optional-fields/: SKILL.md
proxy-rs/.qwen/skills/auto-skill-toml-config-editor/: SKILL.md
proxy-rs/src/: config.rs  connectivity.rs  convert.rs  error.rs  macos_menu.rs  main.rs  metrics.rs  model.rs  proxy.rs  sse.rs  ui.rs
proxy-tauri/: Makefile  README.md  README_EN.md  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  widget.html
proxy-tauri/.qwen/skills/auto-skill-tauri-cross-compile/: SKILL.md
proxy-tauri/release/macos-arm64/ProxyTauri.app/Contents/Resources/: icon.icns
proxy-tauri/release/macos-x64/ProxyTauri.app/Contents/: Info.plist
proxy-tauri/scripts/: setup-linux-sysroot.sh
proxy-tauri/src/: App.tsx  index.css  main.tsx  widget-main.tsx
proxy-tauri/src-tauri/: Cargo.toml  tauri.conf.json
proxy-tauri/src-tauri/capabilities/: default.json
proxy-tauri/src-tauri/icons/: icon.icns
proxy-tauri/src-tauri/src/: config.rs  connectivity.rs  convert.rs  history_store.rs  lib.rs  main.rs  metrics.rs  model_catalog.rs  proxy.rs  version_check.rs
proxy-tauri/src/components/: FloatingWidget.tsx  StatCard.tsx
proxy-tauri/src/contexts/: AppContext.tsx  MetricsContext.tsx
proxy-tauri/src/lib/: i18n.ts  types.ts  utils.ts
proxy-tauri/src/pages/: About.tsx  Config.tsx  Dashboard.tsx  History.tsx
src/: App.tsx  index.css
src-tauri/src/: config.rs  convert.rs  error.rs  lib.rs  metrics.rs  model.rs  sse.rs
src/contexts/: AppContext.tsx  MetricsContext.tsx
src/lib/: i18n.ts  types.ts
src/pages/: Config.tsx  Dashboard.tsx
