[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI (glow only, skip heavy wgpu backend)
eframe = { version = "0.29.0", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29.0"
egui_plot = "0.29.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }


# Encryption (fernet needs openssl; vendored for cross-compile)
fernet = "0.2"
openssl-sys = { version = "0.9", features = ["vendored"] }

# Config
toml = "0.8"

# Utilities
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true          # strip symbols
codegen-units = 1     # better optimization
panic = "abort"       # smaller binary
